# openclaw-config

./: .gitignore  backup.py
config/: openclaw.json
cron/: jobs.json
workspace/: AGENTS.md  DELEGATION.md  HEARTBEAT.md  IDENTITY.md  MEMORY.md  SOUL.md  USER.md  akshare-migration-checklist.md  akshare-test-plan.md  c2605-monitoring-setup.md  heartbeat_trading_check.py  package-lock.json  package.json  session-check-progress.md  skill-discovery-final-report.md  skill-discovery-log.md  skill-discovery-log.md.bak  todolist.md
workspace/.clawhub/: lock.json
workspace/.learnings/: ERRORS.md  LEARNINGS.md
workspace/.openclaw/: workspace-state.json
workspace/awesome-openclaw-skills/: README.md
workspace/config/: mcporter.json
workspace/docs/: C2605-data-source-optimization.md  heartbeat-trading-verification.md
workspace/english-learning/: english-learning-plan.md  vocabulary.md
workspace/memory/: 2026-03-03.md  2026-03-04.md  2026-03-05.md  2026-03-06.md  2026-03-07.md  2026-03-09.md  2026-03-10-night-trading-investigation.md  2026-03-10.md  2026-03-13.md  heartbeat-log.md  heartbeat-state.json  todo-corn-futures.md
workspace/openclaw-repo/: CHANGELOG.md
workspace/temp_search/skills/skills/jeffersonling1217-png/futu-trading-bot/: README.md  SKILL.md  _meta.json  pyproject.toml
workspace/temp_search/skills/skills/jeffersonling1217-png/futu-trading-bot/docs/: account.md  config.md  trade.md
workspace/temp_search/skills/skills/jeffersonling1217-png/futu-trading-bot/src/: account_manager.py  config_manager.py  quote_service.py  trade_service.py
(+2866 files in other folders)
